--- a/index.html
+++ b/index.html
@@ -18,35 +18,41 @@
 </head>
 
 <body>
-    <nav id="nav">
-        <div class="container">
-            <div class="navbar">
-                <div class="logo"><img src="logo.png.webp" alt=""></div>
-                <ul class="main-ul">
-                    <li><a href="#">HOME</a></li>
-                    <li><a href="#">ABOUT US</a></li>
-                    <li><a href="#">SERVICES</a></li>
-                    <li><a href="#">PRODUCTS</a></li>
-                    <li><a href="#">BLOG</a><i class="fa-solid fa-arrow-down"></i>
-                        <div class="blog-dropdown">
-                            <a href="#">Blog Home</a>
-                            <a href="#">Blog Single</a>
-                        </div>
-                    </li>
-                    <li><a href="#">CONTACT</a></li>
-                    <li><a href="#">DROPDOWN</a><i class="fa-solid fa-arrow-down"></i>
-                        <div class="dropdown">
-                            <a href="#">Elements</a>
-                            <a href="#">Products</a>
-                            <a href="#">Level 2</a>
-                        </div>
-                    </li>
-                </ul>
-                <div class="menu"><i class="fa-solid fa-bars"></i></div>
+    <nav>
+        <div id="nav-top">
+            <div class="container">
+                <div class="nav-top">
+                    <div class="nav-top-icon">
+                        <div><i class="fa-brands fa-twitter"></i></div>
+                        <div><i class="fa-brands fa-square-facebook"></i></div>
+                        <div><i><i class="fa-brands fa-instagram"></i></i></div>
+                        <div><i class="fa-brands fa-youtube"></i></div>
+                    </div>
+                    <h5> +888 012 3654-896 Register/Login</h5>
+                </div>
+            </div>
+        </div>
+        <div id="nav-bottom">
+            <div class="container">
+                <div class="nav-main">
+                    <div class="logo">
+                        <h1><img src="images/logo.png.webp" alt=""></h1>
+                    </div>
+                    <ul class="nav-ul">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Service</a></li>
+                        <li><a href="#">Team</a></li>
+                        <li><a href="#">Price</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">Pages</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </nav>
-    <section id="banner" id="banner">
+    <section id="banner">
         <div class="container">
             <div class="banner">
                 <div class="banner-text">
@@ -62,7 +68,7 @@
             </div>
         </div>
     </section>
-
+    
 </body>
 
 </html>
