--- a/index.html
+++ b/index.html
@@ -68,7 +68,40 @@
             </div>
         </div>
     </section>
-    
+    <section id="services">
+        <div class="container">
+            <h1>Our Offered Services</h1>
+            <p id="p">Who are in extremely love with eco friendly system.</p>
+            <div class="services">
+                <div class="services-box">
+                    <div class="services-image"><img src="images/s1.jpg.webp" alt=""></div>
+                    <div class="services-text">
+                        <h2>Basic & Common Repairs</h2>
+                        <p>Computer users and programmers have become so accustomed to using Windows, even for the
+                            changing capabilities and the appearances of the graphical.</p>
+                    </div>
+                </div>
+                <div class="services-box">
+                    <div class="services-image"><img src="images/s2.jpg.webp" alt=""></div>
+                    <div class="services-text">
+                        <h2>Basic & Common Repairs</h2>
+                        <p>Computer users and programmers have become so accustomed to using Windows, even for the
+                            changing capabilities and the appearances of the graphical.</p>
+                    </div>
+                </div>
+                <div class="services-box">
+                    <div class="services-image"><img src="images/s3.jpg.webp" alt=""></div>
+                    <div class="services-text">
+                        <h2>Basic & Common Repairs</h2>
+                        <p>Computer users and programmers have become so accustomed to using Windows, even for the
+                            changing capabilities and the appearances of the graphical.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <script src="script.js"></script>
+
 </body>
 
 </html>
