--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <div><i><i class="fa-brands fa-instagram"></i></i></div>
                         <div><i class="fa-brands fa-youtube"></i></div>
                     </div>
-                    <h5> +888 012 3654-896 Register/Login</h5>
+                    <p> +888 012 3654-896 Register/Login</p>
                 </div>
             </div>
         </div>
@@ -48,6 +48,7 @@
                         <li><a href="#">Contact</a></li>
                         <li><a href="#">Pages</a></li>
                     </ul>
+                    <div class="nav-menu"><i class="fa-solid fa-bars"></i></div>
                 </div>
             </div>
         </div>
@@ -95,6 +96,148 @@
                         <h2>Basic & Common Repairs</h2>
                         <p>Computer users and programmers have become so accustomed to using Windows, even for the
                             changing capabilities and the appearances of the graphical.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="features">
+        <h1>Some Features that Made us Unique</h1>
+        <p id="p2">Who are in extremely love with eco friendly system.</p>
+        <div class="container">
+            <div class="features">
+                <div class="feature-box">
+                    <h2><i class="fa-regular fa-message"></i>Expert Technicians</h2>
+
+                    <p> Computer users and programmers
+                        have become so accustomed to using
+                        Windows, even for the changing
+                        capabilities and the
+                        appearances of the graphical.</p>
+                </div>
+                <div class="feature-box">
+                    <h2><i class="fa-regular fa-message"></i>Expert Technicians</h2>
+
+                    <p> Computer users and programmers
+                        have become so accustomed to using
+                        Windows, even for the changing
+                        capabilities and the
+                        appearances of the graphical.</p>
+                </div>
+                <div class="feature-box">
+                    <h2><i class="fa-regular fa-message"></i>Expert Technicians</h2>
+
+                    <p> Computer users and programmers
+                        have become so accustomed to using
+                        Windows, even for the changing
+                        capabilities and the
+                        appearances of the graphical.</p>
+                </div>
+                <div class="feature-box">
+                    <h2><i class="fa-regular fa-message"></i>Expert Technicians</h2>
+
+                    <p> Computer users and programmers
+                        have become so accustomed to using
+                        Windows, even for the changing
+                        capabilities and the
+                        appearances of the graphical.</p>
+                </div>
+                <div class="feature-box">
+                    <h2><i class="fa-regular fa-message"></i>Expert Technicians</h2>
+
+                    <p> Computer users and programmers
+                        have become so accustomed to using
+                        Windows, even for the changing
+                        capabilities and the
+                        appearances of the graphical.</p>
+                </div>
+                <div class="feature-box">
+                    <h2><i class="fa-regular fa-message"></i>Expert Technicians</h2>
+                    <p> Computer users and programmers
+                        have become so accustomed to using
+                        Windows, even for the changing
+                        capabilities and the
+                        appearances of the graphical.</p>
+                </div>
+            </div>
+    </section>
+    <section id="latest">
+        <h1>Latest From Our Blog</h1>
+        <p id="p3">Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit,
+            sed do eiusmod tempor
+            incididunt ut labore et
+            dolore magna aliqua.</p>
+        <div class="container">
+            <div class="latest">
+                <div class="latest-box">
+                    <div class="latest-image"><img src="images/b1.jpg (1).webp" alt=""></div>
+                    <button class="latest-btn">10 Jan 2018</button>
+                    <h2>Addiction When Gambling Becomes A Problem</h2>
+                    <p>inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                    <div class="latest-comment">
+                        <p> <i class="fa-regular fa-heart"></i>15 Likes</p>
+                        <p> <i class="fa-regular fa-heart"></i>15 Comment</p>
+                    </div>
+                </div>
+                <div class="latest-box">
+                    <div class="latest-image"><img src="images/b2.jpg.webp" alt=""></div>
+                    <button class="latest-btn">10 Jan 2018</button>
+                    <h2>Addiction When Gambling Becomes A Problem</h2>
+                    <p>inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                    <div class="latest-comment">
+                        <p> <i class="fa-regular fa-heart"></i>15 Likes</p>
+                        <p> <i class="fa-regular fa-heart"></i>15 Comment</p>
+                    </div>
+                </div>
+                <div class="latest-box">
+                    <div class="latest-image"><img src="images/b3.jpg.webp" alt=""></div>
+                    <button class="latest-btn">10 Jan 2018</button>
+                    <h2>Addiction When Gambling Becomes A Problem</h2>
+                    <p>inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                    <div class="latest-comment">
+                        <p> <i class="fa-regular fa-heart"></i>15 Likes</p>
+                        <p> <i class="fa-regular fa-heart"></i>15 Comment</p>
+                    </div>
+                </div>
+                <div class="latest-box">
+                    <div class="latest-image"><img src="images/b2.jpg.webp" alt=""></div>
+                    <button class="latest-btn">10 Jan 2018</button>
+                    <h2>Addiction When Gambling Becomes A Problem</h2>
+                    <p>inappropriate behavior ipsum dolor sit amet, consectetur.</p>
+                    <div class="latest-comment">
+                        <p> <i class="fa-regular fa-heart"></i>15 Likes</p>
+                        <p> <i class="fa-regular fa-heart"></i>15 Comment</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="footer">
+        <div class="container">
+            <div class="footer">
+                <div class="footer-box">
+                    <h2>About Us</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        dolore magna aliqua.</p>
+                    <p>Copyright ©2023 All rights reserved | This template is made with <i style=" color: orange;"
+                                class="fa-regular fa-heart"></i> by <span style="color: orange;">Colorlib</span></p>
+                </div>
+                <div class="footer-box">
+                    <h2>Newsletter</h2>
+                    <p>Stay update with our latest</p>
+                    <input type="text" placeholder="Enter Email">
+                    <button><i class="fa-solid fa-arrow-right"></i></button>
+                </div>
+                <div class="footer-box">
+                    <h2>Follow Us</h2>
+                    <p>Let us be social</p>
+                    <div class="footer-icon">
+                        <div><i class="fa-brands fa-twitter"></i></div>
+                        <div><i class="fa-brands fa-square-facebook"></i></div>
+                        <div><i><i class="fa-brands fa-instagram"></i></i></div>
+                        <div><i class="fa-brands fa-youtube"></i></div>
                     </div>
                 </div>
             </div>
