--- a/index.html
+++ b/index.html
@@ -49,6 +49,19 @@
                         <li><a href="#">Pages</a></li>
                     </ul>
                     <div class="nav-menu"><i class="fa-solid fa-bars"></i></div>
+                    <div class="hamburger">
+                        <span id="close-button">&times;</span>
+                        <ul class="hamburger-menu">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About Us</a></li>
+                            <li><a href="#">Service</a></li>
+                            <li><a href="#">Team</a></li>
+                            <li><a href="#">Price</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                            <li><a href="#">Pages</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
